# kanshi

./: Cargo.toml  Makefile  README.md
.cargo/: config
.github/: release-draft.yml
.github/workflows/: release-cargo.yml  release-js.yml  release-py.yml
kanshi/: Cargo.toml
kanshi-js/: .gitignore  Cargo.toml  README.md  kanshi-js-0.1.5.tgz  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
kanshi-js/js/: index.cts  index.mts  load.cts
kanshi-js/scripts/: postinstall.js
kanshi-js/src/: lib.rs
kanshi-js/test/: index.test.ts  kanshi.test.js
kanshi-py/: Cargo.toml  README.md  pyproject.toml
kanshi-py/src/: lib.rs  runtime.rs
kanshi-py/test/: main.py
kanshi/src/: lib.rs
src/: errors.rs  events.rs  lib.rs  opts.rs
