[workspace]
members = ["kanshi", "kanshi-js", "kanshi-py"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Carl Voller"]
edition = "2021"
homepage = "https://github.com/carlvoller/kanshi"
license = "MIT"
repository = "https://github.com/carlvoller/kanshi"

[workspace.dependencies]

[profile.release]
opt-level = 3
lto = "fat"
debug = true
overflow-checks = false
debug-assertions = false
