[workspace]
members = ["kanshi", "kanshi-js", "kanshi-py"]
resolver = "2"

[workspace.package]
authors = ["Carl Voller"]
edition = "2021"
homepage = "https://github.com/carlvoller/kanshi"
license = "BSD-3-Clause"
repository = "https://github.com/carlvoller/kanshi"

[workspace.dependencies]
kanshi = { version = "0.1.0", path = "kanshi", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
debug = true
overflow-checks = false
debug-assertions = false
