[package]
name = "kanshi-js"
version = "0.1.7"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.31"
kanshi = { workspace = true }
neon = { version = "1", features = ["futures"] }
tokio = { version = "1.42.0", features = ["rt"] }
