[package]
name = "kanshi-py"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kanshipy"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.31"
pyo3 = "0.24"
pyo3-async-runtimes = { version = "0.24", features = ["attributes", "tokio-runtime"] }
tokio = "1.40"
kanshi = { workspace = true }
