[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "kanshipy"
requires-python = ">=3.8"
version = "0.0.1"
description = "A high level abstraction above native file system watcher APIs (like inotify, fanotify, etc)"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "kanshipy._kanshipy"
