[package]
name = "kanshi"
description = "Easy-to-use rust crate for watching the filesystem"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = "./README.md"

[dependencies]
async-stream = "0.3.6"
futures = "0.3"
libc = "0.2.166"
nix = { features = ["event", "fanotify", "fs", "inotify"], git = "https://github.com/carlvoller/nix", branch = "handle_fix" }
thiserror = "1.0.64"
tokio = { version = "1.41.1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.13"

